deployment/clusters/staging/webgoat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webgoat
  labels:
    name: webgoat
