deployment/clusters/staging/webgoat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgoat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgoat
  template:
    metadata:
      labels:
        app: webgoat
    spec:
      containers:
      - name: webgoat
        image: webgoat/webgoat
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: webgoat
spec:
  selector:
    app: webgoat
  ports:
  - name: http
    port: 80
    targetPort: 9090
  type: ClusterIP
