deployment/clusters/staging/webgoat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webgoat
  namespace: webgoat
spec:
  ingressClassName: nginx
  rules:
    - host: webgoat.zaklabs.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: webgoat
                port:
                  number: 9090
